--- a/step1_lm_finetuning/data_preparation/clean_stackexchange_QA_demonstration.ipynb
+++ b/step1_lm_finetuning/data_preparation/clean_stackexchange_QA_demonstration.ipynb
@@ -868,8 +868,7 @@
    },
    "outputs": [],
    "source": [
-    "qa_features[['id', 'host', 'question_username', 'answer_username', 'title', 'body', 'answer']]\\\n",
-    "    .to_csv('../../input/qa_stackexchange_cleaned.tsv', index=False)"
+    "qa_features.to_csv('../../input/qa_stackexchange_cleaned.tsv', index=False)"
    ]
   },
   {
