update README; refactor a bit

--- a/step1_lm_finetuning/data_preparation/clean_stackexchange_QA_demonstration.ipynb
+++ b/step1_lm_finetuning/data_preparation/clean_stackexchange_QA_demonstration.ipynb
@@ -47,7 +47,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH_TO_SX_PARSED = Path('../../input/sx_dump/stackexchange_parsed')"
+    "PATH_TO_SX_PARSED = Path('../../input/sx_dump/stackexchange_parsed')\n",
+    "PATH_TO_SAVE = Path('../../input')"
    ]
   },
   {
@@ -72,7 +73,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "415ff6c27be94c968093c2c3e9afee05",
+       "model_id": "13c65c62611a445daa83bf5874297762",
        "version_major": 2,
        "version_minor": 0
       },
@@ -203,7 +204,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "94a42ee0e515436c9be8fd77900736ff",
+       "model_id": "d7bf8dae60854d46aa5ec2aaa1b1898e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -224,7 +225,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "00646ba083fd4868b8490e1d96ae1e01",
+       "model_id": "fd51bacb2bd343e7b736bee668e661fa",
        "version_major": 2,
        "version_minor": 0
       },
@@ -260,7 +261,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "290ed9ed323b47aeae264c1773126710",
+       "model_id": "df243821aeb345c496127674317171d2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -314,7 +315,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7ab64fc20212497e82f699c3e9f38024",
+       "model_id": "de511be31f9b4692b92af5ba3d1d764c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -330,8 +331,8 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "CPU times: user 65.5 ms, sys: 43.3 ms, total: 109 ms\n",
-      "Wall time: 671 ms\n"
+      "CPU times: user 59.7 ms, sys: 40.7 ms, total: 100 ms\n",
+      "Wall time: 564 ms\n"
      ]
     }
    ],
@@ -538,7 +539,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6b49f244f42b466f9ef80d28cf8f9e5b",
+       "model_id": "12fa30cd346c406bab9c217924ca7f53",
        "version_major": 2,
        "version_minor": 0
       },
@@ -670,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -727,7 +728,7 @@
        "      <td>When I've printed an object I've had to choose...</td>\n",
        "      <td>hroncok</td>\n",
        "      <td>You could experiment with slicing. For example...</td>\n",
-       "      <td>3.19197</td>\n",
+       "      <td>3.21337</td>\n",
        "      <td>2.07692</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -745,7 +746,7 @@
        "      <td>When I've printed an object I've had to choose...</td>\n",
        "      <td>plaintoothpaste</td>\n",
        "      <td>For FDM technologies in general with a single ...</td>\n",
-       "      <td>1.59598</td>\n",
+       "      <td>1.60668</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -761,9 +762,9 @@
        "      <td>3.43195</td>\n",
        "      <td>Are there any metals that exhibit a large glas...</td>\n",
        "      <td>Plastic is used in 3D FDM/FFF printing partly ...</td>\n",
-       "      <td>tbm0115</td>\n",
-       "      <td>I think the closest you're going to get is wit...</td>\n",
-       "      <td>2.60294</td>\n",
+       "      <td>TextGeek</td>\n",
+       "      <td>I\"m no expert on this, but the article at http...</td>\n",
+       "      <td>2.62039</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -781,7 +782,7 @@
        "      <td>Plastic is used in 3D FDM/FFF printing partly ...</td>\n",
        "      <td>Ryan Carlyle</td>\n",
        "      <td>A few things are required for effective extrus...</td>\n",
-       "      <td>2.82688</td>\n",
+       "      <td>2.84583</td>\n",
        "      <td>2.07692</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -799,7 +800,7 @@
        "      <td>I would like to buy a 3D printer, but I'm conc...</td>\n",
        "      <td>Tom van der Zanden</td>\n",
        "      <td>There is very little information about safety ...</td>\n",
-       "      <td>4.42286</td>\n",
+       "      <td>4.45251</td>\n",
        "      <td>2.07692</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -831,16 +832,16 @@
        "                                                body     answer_username  \\\n",
        "0  When I've printed an object I've had to choose...             hroncok   \n",
        "1  When I've printed an object I've had to choose...     plaintoothpaste   \n",
-       "2  Plastic is used in 3D FDM/FFF printing partly ...             tbm0115   \n",
+       "2  Plastic is used in 3D FDM/FFF printing partly ...            TextGeek   \n",
        "3  Plastic is used in 3D FDM/FFF printing partly ...        Ryan Carlyle   \n",
        "4  I would like to buy a 3D printer, but I'm conc...  Tom van der Zanden   \n",
        "\n",
        "                                              answer answer_score  \\\n",
-       "0  You could experiment with slicing. For example...      3.19197   \n",
-       "1  For FDM technologies in general with a single ...      1.59598   \n",
-       "2  I think the closest you're going to get is wit...      2.60294   \n",
-       "3  A few things are required for effective extrus...      2.82688   \n",
-       "4  There is very little information about safety ...      4.42286   \n",
+       "0  You could experiment with slicing. For example...      3.21337   \n",
+       "1  For FDM technologies in general with a single ...      1.60668   \n",
+       "2  I\"m no expert on this, but the article at http...      2.62039   \n",
+       "3  A few things are required for effective extrus...      2.84583   \n",
+       "4  There is very little information about safety ...      4.45251   \n",
        "\n",
        "  is_answer_accepted  \n",
        "0            2.07692  \n",
@@ -850,7 +851,7 @@
        "4            2.07692  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,7 +869,12 @@
    },
    "outputs": [],
    "source": [
-    "qa_features.to_csv('../../input/qa_stackexchange_cleaned.tsv', index=False)"
+    "qa_features.rename(columns={'body': 'question_body',\n",
+    "                                'title': 'question_title'}).to_csv(PATH_TO_SAVE / 'qa_stackexchange_cleaned.csv',\n",
+    "                                                                   index=False)\n",
+    "qa_features.rename(columns={'body': 'question_body',\n",
+    "                            'title': 'question_title'}).head(50).to_csv(PATH_TO_SAVE / 'qa_stackexchange_cleaned_toy.csv',\n",
+    "                                                                   index=False)"
    ]
   }
  ],
